--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql-server-lambda": "^1.3.6",
+    "graphql-tools": "^3.0.1",
     "yelp-fusion": "^2.0.3",
     "yql": "^1.0.2"
   },
