--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "extend": "^3.0.2",
     "graphql": "^0.13.2",
     "graphql-server-lambda": "^1.3.6",
     "graphql-tools": "^3.0.1",
@@ -21,8 +22,8 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
-    "jest": "^22.4.3",
-    "serverless": "^1.27.2",
+    "jest": "^24.8.0",
+    "serverless": "^1.44.1",
     "serverless-offline": "^3.21.1"
   }
 }
