--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cryptiles": "^4.1.3",
     "extend": "^3.0.2",
     "graphql": "^0.13.2",
     "graphql-server-lambda": "^1.3.6",
